# hgr

./: .gitignore  README.md  pyproject.toml
hgr/: config.py  data_generation.py  pyvenv.cfg  workflow.ipynb
hgr/Dataset/: give.npy  hold.npy  point.npy  stop.npy
